// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alias-key.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{&123 foo, *123 : 456}

=====================================output=====================================
{&123 foo, *123 : 456}

================================================================================
`;

exports[`alias-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{&123 foo, *123 : 456}

=====================================output=====================================
{ &123 foo, *123 : 456 }

================================================================================
`;

exports[`alias-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{&123 foo, *123 : 456}

=====================================output=====================================
{ &123 foo, *123 : 456 }

================================================================================
`;

exports[`array-key.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
}

================================================================================
`;

exports[`array-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`array-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],? [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
}

================================================================================
`;

exports[`array-key-array-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`array-key-array-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
    ? [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ]
    : [
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
          longlonglonglonglonglonglonglonglonglonglong,
      ],
}

================================================================================
`;

exports[`array-key-array-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  ? [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ]
  : [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`array-plain.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
}

================================================================================
`;

exports[`array-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
    [
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
        longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`array-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],[longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
  [
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglong,
  ],
}

================================================================================
`;

exports[`array-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{a: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],b: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],c: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  a:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  b:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  c:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`array-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{a: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],b: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],c: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
    a:
        [
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
        ],
    b:
        [
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
        ],
    c:
        [
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
            longlonglonglonglonglonglonglonglonglonglong,
        ],
}

================================================================================
`;

exports[`array-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{a: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],b: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong],c: [longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong, longlonglonglonglonglonglonglonglonglonglong]}

=====================================output=====================================
{
  a:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  b:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
  c:
    [
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
      longlonglonglonglonglonglonglonglonglonglong,
    ],
}

================================================================================
`;

exports[`comment-between.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
? 123
# comment
: 456
}

=====================================output=====================================
{
  ? 123
  # comment
  : 456,
}

================================================================================
`;

exports[`comment-between.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{
? 123
# comment
: 456
}

=====================================output=====================================
{
    ? 123
    # comment
    : 456,
}

================================================================================
`;

exports[`comment-between.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
? 123
# comment
: 456
}

=====================================output=====================================
{
  ? 123
  # comment
  : 456,
}

================================================================================
`;

exports[`comment-trailing.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{123, # comment
}

=====================================output=====================================
{
  123, # comment
}

================================================================================
`;

exports[`comment-trailing.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{123, # comment
}

=====================================output=====================================
{
    123, # comment
}

================================================================================
`;

exports[`comment-trailing.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{123, # comment
}

=====================================output=====================================
{
  123, # comment
}

================================================================================
`;

exports[`empty.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{}

=====================================output=====================================
{}

================================================================================
`;

exports[`empty.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{}

=====================================output=====================================
{}

================================================================================
`;

exports[`empty.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{}

=====================================output=====================================
{}

================================================================================
`;

exports[`empty-item-colon.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ : }

=====================================output=====================================
{: }

================================================================================
`;

exports[`empty-item-colon.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{ : }

=====================================output=====================================
{ : }

================================================================================
`;

exports[`empty-item-colon.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ : }

=====================================output=====================================
{ : }

================================================================================
`;

exports[`empty-line.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb }

=====================================output=====================================
{
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
}

================================================================================
`;

exports[`empty-line.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb }

=====================================output=====================================
{
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
}

================================================================================
`;

exports[`empty-line.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, 

bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb }

=====================================output=====================================
{
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,

  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
}

================================================================================
`;

exports[`empty-line-collapse.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ aaa, 

bbb }

=====================================output=====================================
{aaa, bbb}

================================================================================
`;

exports[`empty-line-collapse.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{ aaa, 

bbb }

=====================================output=====================================
{ aaa, bbb }

================================================================================
`;

exports[`empty-line-collapse.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{ aaa, 

bbb }

=====================================output=====================================
{ aaa, bbb }

================================================================================
`;

exports[`long-key.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-key-long-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`long-key-long-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`long-key-long-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`long-plain.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
    longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3}

=====================================output=====================================
{
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong1,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong2,
  longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong3,
}

================================================================================
`;

exports[`long-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
  1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`long-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
    1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
    3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`long-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong}

=====================================output=====================================
{
  1: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
  3: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglong,
}

================================================================================
`;

exports[`middle-comment.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map #comment
{}

=====================================output=====================================
!!map #comment
{}

================================================================================
`;

exports[`middle-comment.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map #comment
{}

=====================================output=====================================
!!map #comment
{}

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map #comment
{}

=====================================output=====================================
!!map #comment
{}

================================================================================
`;

exports[`middle-comments.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
{}

=====================================output=====================================
!!map
# comment 1
# comment 2
{}

================================================================================
`;

exports[`middle-comments.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
{}

=====================================output=====================================
!!map
# comment 1
# comment 2
{}

================================================================================
`;

exports[`middle-comments.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
{}

=====================================output=====================================
!!map
# comment 1
# comment 2
{}

================================================================================
`;

exports[`next-empty-line.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
}

=====================================output=====================================
{
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
}

================================================================================
`;

exports[`next-empty-line.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
}

=====================================output=====================================
{
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
    bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

    c: 123,
}

================================================================================
`;

exports[`next-empty-line.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123, 

c: 123
}

=====================================output=====================================
{
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa: 123,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb: 123,

  c: 123,
}

================================================================================
`;

exports[`props.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map &anchor {a: 1}

=====================================output=====================================
!!map &anchor {a: 1}

================================================================================
`;

exports[`props.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map &anchor {a: 1}

=====================================output=====================================
!!map &anchor { a: 1 }

================================================================================
`;

exports[`props.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map &anchor {a: 1}

=====================================output=====================================
!!map &anchor { a: 1 }

================================================================================
`;

exports[`props-in-map.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor {a: 1}

=====================================output=====================================
a: !!map &anchor {a: 1}

================================================================================
`;

exports[`props-in-map.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor {a: 1}

=====================================output=====================================
a: !!map &anchor { a: 1 }

================================================================================
`;

exports[`props-in-map.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor {a: 1}

=====================================output=====================================
a: !!map &anchor { a: 1 }

================================================================================
`;

exports[`short-key.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? 1,? 2,? 3}

=====================================output=====================================
{1, 2, 3}

================================================================================
`;

exports[`short-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{? 1,? 2,? 3}

=====================================output=====================================
{ 1, 2, 3 }

================================================================================
`;

exports[`short-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{? 1,? 2,? 3}

=====================================output=====================================
{ 1, 2, 3 }

================================================================================
`;

exports[`short-key-short-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: a,2: b,3: c}

=====================================output=====================================
{1: a, 2: b, 3: c}

================================================================================
`;

exports[`short-key-short-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{1: a,2: b,3: c}

=====================================output=====================================
{ 1: a, 2: b, 3: c }

================================================================================
`;

exports[`short-key-short-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: a,2: b,3: c}

=====================================output=====================================
{ 1: a, 2: b, 3: c }

================================================================================
`;

exports[`short-plain.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1,2,3}

=====================================output=====================================
{1, 2, 3}

================================================================================
`;

exports[`short-plain.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{1,2,3}

=====================================output=====================================
{ 1, 2, 3 }

================================================================================
`;

exports[`short-plain.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1,2,3}

=====================================output=====================================
{ 1, 2, 3 }

================================================================================
`;

exports[`short-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: 1,2: 2,3: 3}

=====================================output=====================================
{1: 1, 2: 2, 3: 3}

================================================================================
`;

exports[`short-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{1: 1,2: 2,3: 3}

=====================================output=====================================
{ 1: 1, 2: 2, 3: 3 }

================================================================================
`;

exports[`short-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{1: 1,2: 2,3: 3}

=====================================output=====================================
{ 1: 1, 2: 2, 3: 3 }

================================================================================
`;

exports[`very-long-value.yml - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
}

=====================================output=====================================
{
  x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890,
}

================================================================================
`;

exports[`very-long-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
{
x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
}

=====================================output=====================================
{
    x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890,
}

================================================================================
`;

exports[`very-long-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
}

=====================================output=====================================
{
  x: 12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890,
}

================================================================================
`;
